<resources>
    <string name="app_name">Liftonia</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="map_key" translatable="false">AIzaSyC_7uSABb5LmD52YdMOsKaQwDsXH1WUZN8</string>
    <string name="Register_button">Register</string>
    <string name="password_text">" Password"</string>
    <string name="login_button">" Sign in"</string>
    <string name="email_text">" Email"</string>
    <string name="first_name">" First Name"</string>
    <string name="last_name">" Last Name"</string>
    <string name="confirm_password">" Confirm Password"</string>
    <string name="cell_no" translatable="false">" Phone No"</string>
    <string name="title_activity_maps">Map</string>
    <string-array name="spinner_items">
        <item>Main Campus</item>
        <item>City Campus</item>
        <item>North Campus</item>
    </string-array>
</resources>

