<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:background="#DFE4EC"
        android:elevation="20dp"
        android:fadingEdgeLength="10dp"
        android:gravity="center|center_vertical"
        android:theme="@style/AppTheme.NoActionBarBG"
        app:elevation="10dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/register_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:outlineAmbientShadowColor="#00E70808"
            android:outlineSpotShadowColor="#00140C0C"
            android:textAlignment="center"
            app:layout_scrollFlags="enterAlways|snap">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:gravity="center"
                android:includeFontPadding="true"
                android:padding="3dp"
                android:text="Liftonia"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#111111"
                android:textSize="30sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Register">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTintMode="screen">

            <EditText
                android:id="@+id/editText8"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:fontFamily="@font/assistant_semibold"
                android:hint="@string/cell_no"
                android:inputType="textPersonName|phone"
                android:phoneNumber="true"
                android:textColor="#C7CBE6"
                android:textColorHint="#A8FDFAFA"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText7" />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:fontFamily="@font/assistant_semibold"
                android:hint="@string/confirm_password"
                android:inputType="textPersonName"
                android:password="true"
                android:textColor="#C7CBE6"
                android:textColorHint="#A8FDFAFA"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText5" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:fontFamily="@font/assistant_semibold"
                android:hint="@string/password_text"
                android:inputType="textPersonName"
                android:password="true"
                android:textColor="#C7CBE6"
                android:textColorHint="#A8FDFAFA"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText3" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:fontFamily="@font/assistant_semibold"
                android:hint="@string/email_text"
                android:inputType="textPersonName|textEmailAddress"
                android:textColor="#C7CBE6"
                android:textColorHint="#A8FDFAFA"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText2" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:fontFamily="@font/assistant_semibold"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:textColor="#C7CBE6"
                android:textColorHint="#A8FDFAFA"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/editText2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:fontFamily="@font/assistant_semibold"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textColor="#C7CBE6"
                android:textColorHint="#A8FDFAFA"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/cust_btn"
                android:elevation="40dp"
                android:fontFamily="@font/assistant_semibold"
                android:onClick="Register"
                android:text="@string/Register_button"
                android:textColor="#F7F9FD"
                android:textColorHint="#09E21F"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText10" />

            <EditText
                android:id="@+id/editText10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="SID"
                android:inputType="number"
                android:textColor="#C7CBE6"
                android:textColorHint="#ADF7ECEC"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText8" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>